k8s/notejam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam-service
  namespace: notejam
spec:
  selector:
    app: notejam
  ports:
    - port: 3000
      targetPort: 3000
